// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<toolbar> demo: > render [actions] correctly 1`] = `
<div class="sd-toolbar sd-toolbar-with-border" style="--toolbar-item-height: 32px; --toolbar-span-width: 230px; --toolbar-item-max-width: unset; --toolbar-body-max-height: none;">
  <div class="sd-spin sd-toolbar-inner">
    <div class="sd-toolbar-body sd-toolbar-body--schema">
      <form class="sd-form sd-form-layout-horizontal sd-form-size-medium sd-form-auto-label-width sd-json-form sd-json-form--default">
        <div class="sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal" style="grid-column: span 1;">
          <!--v-if-->
          <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="keyword">
            <div class="sd-form-item-content-wrapper">
              <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-input-wrapper" style="width: 220px;"><!----><input class="sd-input sd-input-size-medium" type="text" placeholder="请输入关键字" value=""><!----><!----></span></div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
      </form>
    </div>
    <div class="sd-toolbar-actions">
      <!--v-if--><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->导入
      </button><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->查询
      </button><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->重置
      </button><button class="sd-btn sd-btn-outline sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->导出
      </button>
    </div>
    <!---->
  </div>
</div>
<transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
  <div role="alert" class="sd-alert sd-alert-info">
    <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
        <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z" clip-rule="evenodd"></path>
      </svg></div>
    <div class="sd-alert-body">
      <!--v-if-->
      <div class="sd-alert-content"> 当前查询条件：{"keyword":""}</div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</transition-stub>
`;

exports[`<toolbar> demo: > render [basic] correctly 1`] = `
<div class="sd-toolbar sd-toolbar-with-border" style="--toolbar-item-height: 32px; --toolbar-span-width: 230px; --toolbar-item-max-width: unset; --toolbar-body-max-height: none;">
  <div class="sd-spin sd-toolbar-inner">
    <div class="sd-toolbar-body sd-toolbar-body--schema">
      <form class="sd-form sd-form-layout-horizontal sd-form-size-medium sd-form-auto-label-width sd-json-form sd-json-form--default">
        <div class="sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal" style="grid-column: span 1;">
          <!--v-if-->
          <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="name">
            <div class="sd-form-item-content-wrapper">
              <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-input-wrapper sd-json-form-control"><!----><input class="sd-input sd-input-size-medium" type="text" placeholder="请输入名称" value=""><!----><!----></span></div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
        <div class="sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal" style="grid-column: span 1;">
          <!--v-if-->
          <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="status">
            <div class="sd-form-item-content-wrapper">
              <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-select-view-single sd-select sd-json-form-control sd-select-view sd-select-view-size-medium sd-select-view-search"><!----><input class="sd-select-view-input" placeholder="请选择状态" value=""><span class="sd-select-view-value sd-select-view-value-hidden"><!----></span><span class="sd-select-view-suffix"><!----><span class="sd-select-view-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down sd-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
                <!----></span></span>
                <!---->
              </div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
      </form>
    </div>
    <div class="sd-toolbar-actions">
      <!--v-if--><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->查询
      </button><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->重置
      </button>
    </div>
    <!---->
  </div>
</div>
<transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
  <div role="alert" class="sd-alert sd-alert-info">
    <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
        <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z" clip-rule="evenodd"></path>
      </svg></div>
    <div class="sd-alert-body">
      <!--v-if-->
      <div class="sd-alert-content"> 当前查询条件：{"name":"","status":""}</div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</transition-stub>
`;

exports[`<toolbar> demo: > render [expand] correctly 1`] = `
<div class="sd-toolbar sd-toolbar-with-border" style="--toolbar-item-height: 32px; --toolbar-span-width: 230px; --toolbar-item-max-width: unset; --toolbar-body-max-height: 32px;">
  <div class="sd-spin sd-toolbar-inner">
    <div class="sd-toolbar-body sd-toolbar-body--schema">
      <form class="sd-form sd-form-layout-horizontal sd-form-size-medium sd-form-auto-label-width sd-json-form sd-json-form--default">
        <div class="sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal" style="grid-column: span 1;">
          <!--v-if-->
          <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="name">
            <div class="sd-form-item-content-wrapper">
              <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-input-wrapper sd-json-form-control"><!----><input class="sd-input sd-input-size-medium" type="text" placeholder="请输入名称" value=""><!----><!----></span></div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
        <div class="sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal" style="grid-column: span 1;">
          <!--v-if-->
          <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="status">
            <div class="sd-form-item-content-wrapper">
              <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-select-view-single sd-select sd-json-form-control sd-select-view sd-select-view-size-medium sd-select-view-search"><!----><input class="sd-select-view-input" placeholder="请选择状态" value=""><span class="sd-select-view-value sd-select-view-value-hidden"><!----></span><span class="sd-select-view-suffix"><!----><span class="sd-select-view-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down sd-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
                <!----></span></span>
                <!---->
              </div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
        <div class="sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal" style="grid-column: span 1;">
          <!--v-if-->
          <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="region">
            <div class="sd-form-item-content-wrapper">
              <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-select-view-single sd-select sd-json-form-control sd-select-view sd-select-view-size-medium sd-select-view-search"><!----><input class="sd-select-view-input" placeholder="请选择区域" value=""><span class="sd-select-view-value sd-select-view-value-hidden"><!----></span><span class="sd-select-view-suffix"><!----><span class="sd-select-view-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down sd-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
                <!----></span></span>
                <!---->
              </div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
        <div class="sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal" style="grid-column: span 1;">
          <!--v-if-->
          <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="type">
            <div class="sd-form-item-content-wrapper">
              <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-select-view-single sd-select sd-json-form-control sd-select-view sd-select-view-size-medium sd-select-view-search"><!----><input class="sd-select-view-input" placeholder="请选择类型" value=""><span class="sd-select-view-value sd-select-view-value-hidden"><!----></span><span class="sd-select-view-suffix"><!----><span class="sd-select-view-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down sd-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
                <!----></span></span>
                <!---->
              </div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
        <div class="sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal" style="grid-column: span 1;">
          <!--v-if-->
          <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="owner">
            <div class="sd-form-item-content-wrapper">
              <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-input-wrapper sd-json-form-control"><!----><input class="sd-input sd-input-size-medium" type="text" placeholder="请输入负责人" value=""><!----><!----></span></div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
        <div class="sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal" style="grid-column: span 1;">
          <!--v-if-->
          <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="tag">
            <div class="sd-form-item-content-wrapper">
              <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-input-wrapper sd-json-form-control"><!----><input class="sd-input sd-input-size-medium" type="text" placeholder="请输入标签" value=""><!----><!----></span></div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
      </form>
    </div>
    <div class="sd-toolbar-actions">
      <!--v-if--><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->查询
      </button><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->重置
      </button>
    </div>
    <!---->
  </div>
</div>
`;

exports[`<toolbar> demo: > render [slot] correctly 1`] = `
<div class="sd-toolbar sd-toolbar-with-border" style="--toolbar-item-height: 32px; --toolbar-span-width: 230px; --toolbar-item-max-width: unset; --toolbar-body-max-height: none;">
  <div class="sd-spin sd-toolbar-inner">
    <div class="sd-toolbar-body">
      <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
        <!---->
        <div class="sd-space-item"><span class="sd-input-wrapper" style="width: 200px;"><!----><input class="sd-input sd-input-size-medium" type="text" placeholder="请输入名称" value=""><!----><!----></span></div>
        <!---->
        <div class="sd-space-item"><span class="sd-select-view-single sd-select sd-select-view sd-select-view-size-medium sd-select-view-search" style="width: 160px;"><!----><input class="sd-select-view-input" placeholder="请选择状态" value=""><span class="sd-select-view-value sd-select-view-value-hidden"><!----></span><span class="sd-select-view-suffix"><!----><span class="sd-select-view-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down sd-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
          <!----></span></span>
          <!---->
        </div>
      </div>
    </div>
    <div class="sd-toolbar-actions">
      <!--v-if--><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->查询
      </button><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->重置
      </button>
    </div>
    <!---->
  </div>
</div>
<transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
  <div role="alert" class="sd-alert sd-alert-info">
    <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
        <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z" clip-rule="evenodd"></path>
      </svg></div>
    <div class="sd-alert-body">
      <!--v-if-->
      <div class="sd-alert-content"> 当前查询条件：{"name":"","status":""}</div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</transition-stub>
`;
